Ordered senotype items by created timestamp
